Added Gold pairs Added flag image detections by using tensorflow models

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fxparser"
-version = "2.2.6"
+version = "2.3.1"
 description = "A forex message parser to extract information such as symbols, tps, and sls"
 authors = ["Danny"]
 license = "GNU GPLv3"
@@ -9,6 +9,7 @@ license = "GNU GPLv3"
 python = "^3.6"
 spacy = "^2.3.5"
 emoji = "^0.6.0"
+tensorflow = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 
